--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
